7/19   1.已使用nodemon來watch server.js的更動。   2.sever部分已經可以，但是缺少與client連結的部分。(解決方法如下3)   2.一定要用webpack來打包react成static網頁，     再由server.js render去導入畫面。

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,12 @@
   <!-- Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- socketio for client -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+
+  <script>
+    
+  </script>
 </head>
 
 <body>
